<resources>
    <string name="app_name">Test Ahfas</string>
    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="balum_punya_akun">Balum Punya Akun ?</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slogan">Nikmati pengalaman belajar online paling lengkap, dan mudah dimengerti.</string>
    <string name="poster">Poster</string>
    <string name="welcome">Selamat Datang</string>
    <string name="materi">Materi</string>
    <string name="tryout">Tryout</string>
    <string name="add">Tambah data</string>
    <string name="name">Name</string>
    <string name="content">Content</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout</string>
</resources>